--- a/Auto Layout Practice/Base.lproj/Main.storyboard
+++ b/Auto Layout Practice/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,13 +18,65 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7AP-PQ-iGU" userLabel="top">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="284"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="artBoard" translatesAutoresizingMaskIntoConstraints="NO" id="uUI-Hf-sQs">
+                                        <rect key="frame" x="40" y="78" width="240" height="128"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="240" id="B1z-aN-lHJ"/>
+                                            <constraint firstAttribute="height" constant="128" id="rxY-gm-ZCi"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.90588235289999997" green="0.29803921570000003" blue="0.23529411759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="uUI-Hf-sQs" firstAttribute="centerX" secondItem="7AP-PQ-iGU" secondAttribute="centerX" id="1s8-02-IrD"/>
+                                    <constraint firstItem="uUI-Hf-sQs" firstAttribute="centerY" secondItem="7AP-PQ-iGU" secondAttribute="centerY" id="lnt-6D-jfc"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b7y-M3-X5P" userLabel="bottom">
+                                <rect key="frame" x="0.0" y="284" width="320" height="284"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="notebook" translatesAutoresizingMaskIntoConstraints="NO" id="m3N-si-cZA">
+                                        <rect key="frame" x="40" y="78" width="240" height="128"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="lhg-8h-PEH"/>
+                                            <constraint firstAttribute="width" constant="240" id="w2C-6P-YrQ"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.94509803920000002" green="0.76862745099999996" blue="0.058823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="m3N-si-cZA" firstAttribute="centerX" secondItem="b7y-M3-X5P" secondAttribute="centerX" id="1cL-eJ-r9O"/>
+                                    <constraint firstItem="m3N-si-cZA" firstAttribute="centerY" secondItem="b7y-M3-X5P" secondAttribute="centerY" id="PLj-Id-MhT"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="b7y-M3-X5P" secondAttribute="bottom" id="BWq-pF-ng1"/>
+                            <constraint firstItem="b7y-M3-X5P" firstAttribute="top" secondItem="7AP-PQ-iGU" secondAttribute="bottom" id="ITq-zp-jCl"/>
+                            <constraint firstAttribute="trailing" secondItem="7AP-PQ-iGU" secondAttribute="trailing" id="M53-zV-Eh4"/>
+                            <constraint firstItem="7AP-PQ-iGU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Wgj-Q7-lBa"/>
+                            <constraint firstItem="7AP-PQ-iGU" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="aRx-g9-sRx"/>
+                            <constraint firstItem="b7y-M3-X5P" firstAttribute="top" secondItem="7AP-PQ-iGU" secondAttribute="bottom" id="g2E-rE-5T4"/>
+                            <constraint firstAttribute="trailing" secondItem="b7y-M3-X5P" secondAttribute="trailing" id="nIg-Do-1Xu"/>
+                            <constraint firstItem="b7y-M3-X5P" firstAttribute="height" secondItem="7AP-PQ-iGU" secondAttribute="height" id="ooO-KW-fM2"/>
+                            <constraint firstItem="b7y-M3-X5P" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="xP8-h5-Z76"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="artBoard" width="433" height="533"/>
+        <image name="notebook" width="373.5" height="527"/>
+    </resources>
 </document>
